<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ex2.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_log"
        android:textSize="25sp" />
    
    <ListView
        android:id="@+id/list_log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" 
        android:background="@drawable/border"/>
	
    <Button
        android:id="@+id/button_clear_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/btn_clear_log" />
    
    <TextView
        android:id="@+id/text_phone_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/phone_init_text"
        android:textSize="25sp" />

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" >
        
        <Button 
            android:id="@+id/button_popup"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_popup"/>
        
        <Button 
            android:id="@+id/button_dial"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_dial"/>
        
        <Button
            android:id="@+id/button_enter_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_enter_number" />
        
    </LinearLayout>

</LinearLayout>
